--- a/package.json
+++ b/package.json
@@ -8,8 +8,23 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.4.7",
+    "@react-navigation/native": "^5.4.2",
+    "@react-navigation/stack": "^5.3.9",
+    "moment": "^2.26.0",
     "react": "16.8.6",
-    "react-native": "0.60.4"
+    "react-color": "^2.18.1",
+    "react-native": "0.60.4",
+    "react-native-calendars": "^1.265.0",
+    "react-native-elements": "^2.0.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^11.5.6",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^1.0.2",
+    "react-native-screens": "^2.7.0",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
